--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,3 +6,7 @@ authors = [
   {name = "Bartosz Kogutowicz", email = "kogutek102s@gmail.com"}
 ]
 dependencies = ["flet>=0.27.4", "pandas==2.2.2"]
+
+[tool.flet.android.permission] # --android-permissions
+"android.permission.READ_EXTERNAL_STORAGE" = true
+" android.permission.WRITE_EXTERNAL_STORAGE" = true
